	--- 9.11.0 released ---

	--- 9.11.0rc3 released ---

4471.	[cleanup]	Render client/query logging format consistent for
			ease of log file parsing. (Note that this affects
			"querylog" format: there is now an additional field
			indicating the client object address.) [RT #43238]

4470.	[bug]		Reset message with intent parse before
			calling dns_dispatch_getnext. [RT #43229]

4469.	[placeholder]

	--- 9.11.0rc2 released ---

4468.	[bug]		Address ECS option handling issues. [RT #43191]

4467.	[security]	It was possible to trigger an assertion when
			rendering a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system
			without a non local IPv6 addresses. [RT #43130]

4465.	[bug]		Don't use "%z" as Windows doesn't support it.
			[RT #43131]

4464.	[bug]		Fix windows python support. [RT #43173]

4463.	[bug]		The dnstap system test failed on some systems.
			[RT #43129]

4462.	[bug]		Don't describe a returned EDNS COOKIE as "good"
			when there isn't a valid server cookie. [RT #43167]

4461.	[bug]		win32: not all external data was properly marked
			as external data for windows dll. [RT #43161]

	--- 9.11.0rc1 released ---

4460.	[test]		Add system test for dnstap using unix domain sockets.
			[RT #42926]

4459.	[bug]		TCP client objects created to handle pipeline queries
			were not cleaned up correctly, causing uncontrolled
			memory growth. [RT #43106]

4458.	[cleanup]	Update assertions to be more correct, and also remove
			use of a reserved word. [RT #43090]

4457.	[maint]		Added AAAA (2001:500:a8::e) for E.ROOT-SERVERS.NET.

4456.	[doc]		Add DOCTYPE and lang attribute to <html> tags.
			[RT #42587]

4455.	[cleanup]	Allow dyndb modules to correctly log the filename
			and line number when processing configuration text
			from named.conf. [RT #43050]

4454.	[bug]		'rndc dnstap -reopen' had a race issue. [RT #43089]

4453.	[bug]		Prefetching of DS records failed to update their
			RRSIGs. [RT #42865]
